--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.14.0",
-    "tachyons": "^4.9.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts-ts": "^4.0.8",
+    "tachyons": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -15,10 +15,16 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^22.2.2",
-    "@types/node": "^9.6.1",
-    "@types/react": "^16.1.0",
-    "@types/react-dom": "^16.0.4",
-    "typescript": "^2.8.1"
-  }
+    "@types/jest": "^22.2.3",
+    "@types/node": "^9.6.57",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "typescript": "^2.9.2"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
